--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "build": "echo 'Build step completed'",
     "vercel-build": "echo 'Build step completed'"
   },
   "dependencies": {
@@ -20,5 +21,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "main": "src/index.js"
 } 
